integrated articles and glossary for OOP and AAA testing

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,7 @@
                 <li class="nav-item"><a class="nav-link" href="/docker">Docker</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pyflask">Py Flask</a></li>
                 <li class="nav-item"><a class="nav-link" href="/cicd">CI/CD</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pytutorial">Learn Python</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
         </header>
