updaed aaatest html

--- a/app/simple_pages/templates/aaatest.html
+++ b/app/simple_pages/templates/aaatest.html
@@ -7,12 +7,8 @@
                 <ol class="h4">
                     <li class="nav-item"><a class="nav-link" href="/pytutorial">Python</a></li>
                     <li class="nav-item"><a class="nav-link" href="/oop">OOP</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/aaatest">AAA Testing</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/aaatest">AAA Testing</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pyflask">Py Flask</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cicd">CI/CD</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pytutorial">Learn Python</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                 </ol>
             </div>
             <div class="col-10">
@@ -48,15 +44,24 @@
                 <p>
 
                 </p>
-                <p><h1 class="bold">Example of AAA testing</h1>
+                <p>
+                    <h1 class="bold">Example of AAA testing</h1> Below we see an image of AAA testing.
+                    <img src="static/images/aaatest.PNG" alt="...">
+                </p>
+                <p>
+                    <ol>
+                        <li>We arrange the data by defining the "tuple_list()" with a value of "1.0, 2"</li>
+                        <li>We set the Act by having the "tuple_list" do an add function of the Calculator class for the result</li>
+                        <li>And finally, we test the result of the add method by "assert"ing the result of the sum of "1.0, 2" equaling "3"</li>
+                    </ol>
+                </p>
+                <p>
 
                 </p>
-                <p>
-                   <h1 class="bold"><a class="nav-link" href="/oop">Object Oriented Programming --></a></h1>
-                </p>
+
             </div>
                 <p>
-                <h1 class="bold"><a class="nav-link" href="/aaatest">Calculator Program --></a></h1>
+                    <h1 class="bold"><a class="nav-link" href="/aaatest">Calculator Program --></a></h1>
                 </p>
             </div>
         </div>
