--- a/app/simple_pages/templates/oop.html
+++ b/app/simple_pages/templates/oop.html
@@ -4,15 +4,12 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <ul class="h4">
+                <ol class="h4">
                     <li class="nav-item"><a class="nav-link" href="/pytutorial">Python</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="/oop">OOP</a></li>
                     <li class="nav-item"><a class="nav-link" href="/aaatest">AAA Testing</a></li>
                     <li class="nav-item"><a class="nav-link" href="/pyflask">Py Flask</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/cicd">CI/CD</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pytutorial">Learn Python</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                </ul>
+                </ol>
             </div>
             <div class="col-10">
                 <p>
